Full text of abstract in table

--- a/src/CollectArticles.ipynb
+++ b/src/CollectArticles.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import requests"
+    "import requests\n",
+    "from requests.auth import HTTPBasicAuth\n",
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "r = requests.get('http://api.elsevier.com/content/search/scopus?query=bee&apiKey=eb73f64c03599119a51db065202c555f')\n",
@@ -23,7 +25,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "login = open(\"./LoginInfo.txt\",\"r\")\n",
+    "user = login.readline()\n",
+    "password = login.readline()\n",
+    "login.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {
     "scrolled": true
    },
@@ -31,11 +45,13 @@
    "source": [
     "f = open(\"../data/paperTable.tsv\",\"w\")\n",
     "for entry in data['search-results']['entry']:\n",
+    "    #gets abstract text\n",
+    "    abstractPage = requests.get(entry['link'][2]['@href'],auth = HTTPBasicAuth(user,password))\n",
+    "    bSoupObj = BeautifulSoup(abstractPage.content)\n",
+    "    abstractText = bSoupObj.findAll(\"p\")[1].text\n",
+    "    \n",
     "    #prints title, link to abstract,and creator\n",
-    "    f.write(entry['dc:title']+\"\\t\"+entry['link'][2]['@href']+\"\\t\"+entry['dc:creator']+\"\\n\")\n",
-    "    print entry['dc:title']          \n",
-    "    print entry['link'][2]['@href']\n",
-    "    print entry['dc:creator']\n",
+    "    f.write(entry['dc:title'].encode(\"utf8\")+\"\\t\"+abstractText.encode(\"utf8\")+\"\\t\"+entry['dc:creator'].encode(\"utf8\")+\"\\n\")\n",
     "f.close()"
    ]
   },
@@ -44,10 +60,23 @@
    "metadata": {},
    "source": [
     "### TODO\n",
-    "    -Get full abstract\n",
-    "    -Get all authors\n",
-    "    -Only use real bee articles"
+    "    -Get Keywords\n",
+    "        >Differentiate between scopus assigned and author assigned\n",
+    "    -Get Year\n",
+    "    -Topic Modeling \n",
+    "        >ADA\n",
+    "        >LSI\n",
+    "    -Jenkins Automation"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
