Grabs author and scopus keywords as well as the date published

--- a/src/CollectArticles.ipynb
+++ b/src/CollectArticles.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import requests\n",
@@ -13,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 75,
    "metadata": {
     "collapsed": true
    },
@@ -25,8 +27,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "login = open(\"./LoginInfo.txt\",\"r\")\n",
@@ -37,7 +41,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kalman filter\n"
+     ]
+    }
+   ],
+   "source": [
+    "abstractPage = requests.get(\"https://www.scopus.com/inward/record.uri?partnerID=HzOxMe3b&scp=85039924208&origin=inward\",auth = HTTPBasicAuth(user,password))\n",
+    "bSoupObj = BeautifulSoup(abstractPage.content,\"html5lib\")\n",
+    "abstractText = bSoupObj.find(\"section\",{\"id\":\"authorKeywords\"}).findAll(\"li\")\n",
+    "print abstractText[1].text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Color, Food products, Food storage, Hough transforms, Elliptical shapes, Image moments, Object discrimination, Pollen counting, Pollen discriminations, Receiver operating characteristics, Tracking models, Video monitoring, Kalman filters\n"
+     ]
+    }
+   ],
+   "source": [
+    "sKeywords = \"\"\n",
+    "for word in bSoupObj.find(\"section\",{\"id\":\"indexedKeywords\"}).findAll(\"span\"):\n",
+    "    sKeywords+= word.text+\", \"\n",
+    "print sKeywords[:-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {
     "scrolled": true
    },
@@ -47,11 +91,21 @@
     "for entry in data['search-results']['entry']:\n",
     "    #gets abstract text\n",
     "    abstractPage = requests.get(entry['link'][2]['@href'],auth = HTTPBasicAuth(user,password))\n",
-    "    bSoupObj = BeautifulSoup(abstractPage.content)\n",
+    "    bSoupObj = BeautifulSoup(abstractPage.content,\"html5lib\")\n",
     "    abstractText = bSoupObj.findAll(\"p\")[1].text\n",
     "    \n",
-    "    #prints title, link to abstract,and creator\n",
-    "    f.write(entry['dc:title'].encode(\"utf8\")+\"\\t\"+abstractText.encode(\"utf8\")+\"\\t\"+entry['dc:creator'].encode(\"utf8\")+\"\\n\")\n",
+    "    #creates lists of keywords, seperated into author keywords and scopus assigned keywords\n",
+    "    aKeywords = \"\"\n",
+    "    sKeywords = \"\"\n",
+    "    if bSoupObj.find(\"section\",{\"id\":\"authorKeywords\"}) is not None:\n",
+    "        for word in bSoupObj.find(\"section\",{\"id\":\"authorKeywords\"}).findAll(\"li\"):\n",
+    "            aKeywords+= word.text+\", \"\n",
+    "    if bSoupObj.find(\"section\",{\"id\":\"indexedKeywords\"}) is not None:\n",
+    "        for word in bSoupObj.find(\"section\",{\"id\":\"indexedKeywords\"}).findAll(\"span\"):\n",
+    "            sKeywords+= word.text+\", \"\n",
+    "\n",
+    "    #prints title, abstract, tags, and date created\n",
+    "    f.write(entry['dc:title'].encode(\"utf8\")+\"\\t\"+abstractText.encode(\"utf8\")+\"\\t\"+aKeywords[:-2].encode(\"utf8\")+\"\\t\"+sKeywords[:-2].encode(\"utf8\")+\"\\t\"+entry['prism:coverDate'].encode(\"utf8\")+\"\\n\")\n",
     "f.close()"
    ]
   },
