Updated the stop words

--- a/src/TopicModeling.ipynb
+++ b/src/TopicModeling.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\USER\\Anaconda3\\envs\\py27\\lib\\site-packages\\gensim\\utils.py:1197: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
+      "  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n"
+     ]
+    }
+   ],
    "source": [
     "import string\n",
     "import re\n",
@@ -19,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +67,8 @@
     "stopWords.append(\"\\xc2\\xa9\") #This is the copyright symbol, this shows up in every abstract and should not be apart of the corpus\n",
     "stopWords.extend([\"\\u2019\",\"\\u03bc\",\"bee\",\"bees\",\"honey\",\"honeybee\",\"honeybees\"])\n",
     "stopList = set(stopWords)\n",
-    "\n",
+    "with open(\"../data/extraStopWords.txt\",\"r\") as extraStopFile:\n",
+    "    stopWords.extend(extraStopFile.read().split(\"\\n\"))\n",
     "# Lowercase each document, split it by white space and filter out stopWords\n",
     "texts = []\n",
     "for document in abstracts:\n",
