--- a/src/CollectArticles.ipynb
+++ b/src/CollectArticles.ipynb
@@ -8,16 +8,18 @@
    "source": [
     "import requests\n",
     "from requests.auth import HTTPBasicAuth\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "import urllib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = requests.get('http://api.elsevier.com/content/search/scopus?query=Honey-Bee-Health&apiKey=eb73f64c03599119a51db065202c555f')\n",
+    "args = {'query':'honey bee health','apiKey':'582c2ee616e8c4119ae4201ce59a5e06'}\n",
+    "r = requests.get('http://api.elsevier.com/content/search/scopus?'+urllib.urlencode(args))\n",
     "data = r.json()"
    ]
   },
