--- a/src/TopicModeling.ipynb
+++ b/src/TopicModeling.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\USER\\Anaconda3\\envs\\py27\\lib\\site-packages\\gensim\\utils.py:1197: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
+      "C:\\tools\\Anaconda3\\envs\\python2\\lib\\site-packages\\gensim\\utils.py:1197: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
       "  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n"
      ]
     }
@@ -24,13 +24,18 @@
     "from gensim import corpora\n",
     "from gensim import models\n",
     "from gensim.corpora import Dictionary\n",
+    "from collections import namedtuple\n",
     "import gensim.parsing.preprocessing as processing\n",
-    "numberOfTopics = 125"
+    "#Number of ti\n",
+    "numberOfTopics = 125\n",
+    "#Number of passes the model should make\n",
+    "passes = 10\n",
+    "MyAbstract = namedtuple('MyAbstract',[\"title\",\"date\",\"text\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,9 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\tools\\Anaconda3\\envs\\python2\\lib\\site-packages\\gensim\\parsing\\preprocessing.py:105: UnicodeWarning: Unicode equal comparison failed to convert both arguments to Unicode - interpreting them as being unequal\n",
+      "  return \" \".join(w for w in s.split() if w not in STOPWORDS)\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a set of frequent words\n",
     "stopFile = open(\"../data/stopwords.txt\",\"r\")\n",
@@ -56,12 +70,12 @@
     "with open(\"../data/extraStopWords.txt\",\"r\") as extraStopFile:\n",
     "    stopWords.extend(extraStopFile.read().split(\"\\n\"))\n",
     "# Lowercase each document, split it by white space and filter out stopWords\n",
-    "stopWords.remove('')\n",
     "processing.STOPWORDS = stopWords\n",
     "def removeStops(text):\n",
     "    return processing.remove_stopwords(text.lower().translate(None, string.punctuation))\n",
-    "abstracts = [[art[0],datetime.strptime(art[4][:-1], '%Y-%m-%d'),removeStops((art[1]+art[2]+art[3])) ] for art in entries]\n",
-    "abstracts.sort(key=lambda q: q[1].year)\n",
+    "# List of lists in \n",
+    "abstracts = [MyAbstract._make([art[0],datetime.strptime(art[4][:-1], '%Y-%m-%d'),removeStops((art[1]+art[2]+art[3]))]) for art in entries]\n",
+    "abstracts.sort(key=lambda q: q.date.year)\n",
     "\n",
     "# Count word frequencies\n",
     "from collections import defaultdict\n",
@@ -74,20 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2018-05-25 15:31:25,062 : INFO : adding document #0 to Dictionary(0 unique tokens: [])\n",
-      "2018-05-25 15:31:25,250 : INFO : built Dictionary(3860 unique tokens: [u'limited', u'represent', u'believed', u'alleles', u'copy']...) from 1044 documents (total 148749 corpus positions)\n",
-      "2018-05-25 15:31:25,252 : INFO : saving Dictionary object under d:\\temp\\words.dict, separately None\n",
-      "2018-05-25 15:31:25,256 : INFO : saved d:\\temp\\words.dict\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Save the dictionary of tokens\n",
     "tempFolder = tempfile.gettempdir()\n",
@@ -97,22 +100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2018-05-25 15:31:25,430 : INFO : storing corpus in Matrix Market format to d:\\temp\\words.dict\n",
-      "2018-05-25 15:31:25,433 : INFO : saving sparse matrix to d:\\temp\\words.dict\n",
-      "2018-05-25 15:31:25,434 : INFO : PROGRESS: saving document #0\n",
-      "2018-05-25 15:31:25,868 : INFO : PROGRESS: saving document #1000\n",
-      "2018-05-25 15:31:25,888 : INFO : saved 1044x3860 matrix, density=2.473% (99651/4029840)\n",
-      "2018-05-25 15:31:25,888 : INFO : saving MmCorpus index to d:\\temp\\words.dict.index\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create general corpus and serialize in order for it to be iterated over\n",
     "corpus = [dictionary.doc2bow(text) for text in processedCorpus]\n",
@@ -128,26 +118,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-05-25 15:31:25,903 : INFO : using symmetric alpha at 0.008\n",
-      "2018-05-25 15:31:25,904 : INFO : using symmetric eta at 0.008\n",
-      "2018-05-25 15:31:25,904 : INFO : using serial LDA version on this node\n",
-      "2018-05-25 15:31:25,960 : INFO : running online (single-pass) LDA training, 125 topics, 1 passes over the supplied corpus of 1044 documents, updating model once every 1044 documents, evaluating perplexity every 1044 documents, iterating 50x with a convergence threshold of 0.001000\n",
-      "2018-05-25 15:31:25,960 : WARNING : too few updates, training might not converge; consider increasing the number of passes or iterations to improve accuracy\n",
-      "2018-05-25 15:31:28,707 : INFO : -19.735 per-word bound, 872495.8 perplexity estimate based on a held-out corpus of 1044 documents with 148749 words\n",
-      "2018-05-25 15:31:28,709 : INFO : PROGRESS: pass 0, at document #1044/1044\n",
-      "2018-05-25 15:31:30,743 : INFO : topic #8 (0.008): 0.018*\"gene\" + 0.012*\"behavior\" + 0.011*\"mellifera\" + 0.010*\"animal\" + 0.010*\"species\" + 0.009*\"genes\" + 0.008*\"health\" + 0.008*\"apis\" + 0.007*\"pollen\" + 0.007*\"expression\"\n",
-      "2018-05-25 15:31:30,743 : INFO : topic #73 (0.008): 0.024*\"colonies\" + 0.012*\"varroa\" + 0.010*\"colony\" + 0.009*\"virus\" + 0.008*\"apis\" + 0.007*\"mite\" + 0.006*\"ccd\" + 0.006*\"health\" + 0.006*\"mellifera\" + 0.006*\"study\"\n",
-      "2018-05-25 15:31:30,746 : INFO : topic #103 (0.008): 0.009*\"gene\" + 0.009*\"pollen\" + 0.008*\"expression\" + 0.007*\"animal\" + 0.006*\"cell\" + 0.006*\"tradeoffs\" + 0.006*\"metabolism\" + 0.005*\"genes\" + 0.005*\"apis\" + 0.005*\"crops\"\n",
-      "2018-05-25 15:31:30,747 : INFO : topic #6 (0.008): 0.019*\"pollen\" + 0.011*\"virus\" + 0.009*\"pesticides\" + 0.008*\"colonies\" + 0.008*\"effects\" + 0.008*\"pesticide\" + 0.007*\"varroa\" + 0.006*\"apis\" + 0.006*\"samples\" + 0.006*\"environmental\"\n",
-      "2018-05-25 15:31:30,749 : INFO : topic #94 (0.008): 0.011*\"pesticide\" + 0.011*\"animal\" + 0.011*\"pesticides\" + 0.010*\"exposure\" + 0.007*\"insecticide\" + 0.007*\"colony\" + 0.007*\"nectar\" + 0.007*\"used\" + 0.006*\"pollen\" + 0.006*\"mellifera\"\n",
-      "2018-05-25 15:31:30,752 : INFO : topic diff=67.683464, rho=1.000000\n"
+      "2018-06-04 19:39:47,401 : INFO : using symmetric alpha at 0.008\n",
+      "2018-06-04 19:39:47,404 : INFO : using symmetric eta at 0.008\n",
+      "2018-06-04 19:39:47,407 : INFO : using serial LDA version on this node\n",
+      "2018-06-04 19:39:47,516 : INFO : running online (single-pass) LDA training, 125 topics, 1 passes over the supplied corpus of 1044 documents, updating model once every 1044 documents, evaluating perplexity every 1044 documents, iterating 50x with a convergence threshold of 0.001000\n",
+      "2018-06-04 19:39:47,519 : WARNING : too few updates, training might not converge; consider increasing the number of passes or iterations to improve accuracy\n",
+      "2018-06-04 19:39:50,732 : INFO : -22.686 per-word bound, 6746733.6 perplexity estimate based on a held-out corpus of 1044 documents with 116344 words\n",
+      "2018-06-04 19:39:50,733 : INFO : PROGRESS: pass 0, at document #1044/1044\n",
+      "2018-06-04 19:39:53,381 : INFO : topic #33 (0.008): 0.011*\"colony\" + 0.009*\"pesticide\" + 0.008*\"©\" + 0.007*\"imidacloprid\" + 0.007*\"clothianidin\" + 0.006*\"varroa\" + 0.006*\"thiacloprid\" + 0.005*\"mite\" + 0.005*\"mites\" + 0.005*\"morphometric\"\n",
+      "2018-06-04 19:39:53,382 : INFO : topic #5 (0.008): 0.019*\"varroa\" + 0.017*\"carbendazim\" + 0.013*\"esp\" + 0.012*\"esterases\" + 0.009*\"enzymes\" + 0.009*\"resistance\" + 0.009*\"parasite\" + 0.009*\"rna\" + 0.008*\"colony\" + 0.008*\"soil\"\n",
+      "2018-06-04 19:39:53,385 : INFO : topic #31 (0.008): 0.011*\"mortality\" + 0.010*\"ph\" + 0.010*\"protease\" + 0.009*\"©\" + 0.009*\"mite\" + 0.008*\"activities\" + 0.008*\"maize\" + 0.008*\"pathogens\" + 0.007*\"colony\" + 0.006*\"monitoring\"\n",
+      "2018-06-04 19:39:53,388 : INFO : topic #124 (0.008): 0.026*\"pollen\" + 0.016*\"insecticides\" + 0.012*\"nectar\" + 0.010*\"pollinators\" + 0.009*\"insecticide\" + 0.008*\"varroa\" + 0.008*\"neonicotinoid\" + 0.007*\"pesticide\" + 0.007*\"©\" + 0.007*\"neonicotinoids\"\n",
+      "2018-06-04 19:39:53,390 : INFO : topic #90 (0.008): 0.015*\"varroa\" + 0.014*\"mite\" + 0.013*\"colony\" + 0.008*\"mortality\" + 0.008*\"destructor\" + 0.007*\"©\" + 0.007*\"virus\" + 0.005*\"collapse\" + 0.005*\"rice\" + 0.005*\"multiple\"\n",
+      "2018-06-04 19:39:53,394 : INFO : topic diff=75.825912, rho=1.000000\n"
      ]
     }
    ],
@@ -228,11 +218,11 @@
     "#Makes the top nine terms for each document\n",
     "\n",
     "topNineFile = open(\"../data/Docbow/TopNineTerms-\"+str(numberOfTopics)+\".tsv\",\"w\")\n",
-    "for x in xrange(0,len(abstracts)):\n",
-    "    doc = dictionary.doc2bow(abstracts[x].split()) # Convert to bag of words format first\n",
+    "for abstr in abstracts:\n",
+    "    doc = dictionary.doc2bow(abstracts[2].split()) # Convert to bag of words format first\n",
     "    # Get the topics and words associated with each document\n",
     "    docTopics, wordTopics, phiValues = lda.get_document_topics(doc, per_word_topics=True)\n",
-    "    topNineFile.write(yearOfAbstract[x]+\"\\t\"+titleOfAbstract[x]+\"\\t\")\n",
+    "    topNineFile.write(yearOfAbstract[x]+\"\\t\"+abst+\"\\t\")\n",
     "    for z in xrange(0,len(phiValues)):\n",
     "        phiValues[z][1].sort(key=lambda q:q[1],reverse=True)\n",
     "    phiValues.sort(key=lambda q:q[1][0][1],reverse=True)\n",
@@ -259,6 +249,26 @@
     "            for word in [dictionary[x[0]] for x in lda.get_topic_terms(t[0],topn=3)]:\n",
     "                file.write(word+\"\\t\")\n",
     "        file.write(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MyAbstract(title='World bee health update 1996', date=datetime.datetime(1996, 1, 1, 0, 0), text=u'comprehensive review world published world 199310 updated 199511 supplement correct records given earlier brief update includes new reports records included previous articles series make useful incorporates records published 1995 update read original review reference status almost every country worldapis')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abstracts[0]"
    ]
   },
   {
